gfxboot-theme-ubuntu (0.9.1) UNRELEASED; urgency=low

  * Remove "Safe graphics mode" message, which is no longer used.
  * Add nomodeset to "Other options" menu.

 -- Colin Watson <cjwatson@ubuntu.com>  Fri, 12 Feb 2010 13:11:08 +0000

gfxboot-theme-ubuntu (0.9.0) lucid; urgency=low

  * Remove "Press F4 to select alternative start-up and installation modes."
    message; it confuses beginners and doesn't help advanced users all that
    much.
  * Change "^Try Ubuntu without any change to your computer" (etc.) messages
    to "^Try Ubuntu without installing" (etc.), by request of the design
    team.

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 26 Nov 2009 17:07:01 +0000

gfxboot-theme-ubuntu (0.8.9) karmic; urgency=low

  * Update translations from Launchpad.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 26 Oct 2009 12:36:50 +0000

gfxboot-theme-ubuntu (0.8.8) karmic; urgency=low

  * Update translations from Launchpad.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 19 Oct 2009 09:57:50 +0100

gfxboot-theme-ubuntu (0.8.7) karmic; urgency=low

  * Add "nodmraid" as an option on the F6 menu.

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 14 Oct 2009 21:02:07 +0100

gfxboot-theme-ubuntu (0.8.6) karmic; urgency=low

  * Build-depend on cpio.

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 07 Oct 2009 17:43:20 +0100

gfxboot-theme-ubuntu (0.8.5) karmic; urgency=low

  * Sync with console-setup 1.34ubuntu4: add Asturian, Catalan, Senegal, and
    Turkmenistan layouts.
  * Remove doubled parentheses in description of "Turkey (F)" layout.

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 01 Oct 2009 23:10:41 +0100

gfxboot-theme-ubuntu (0.8.4) karmic; urgency=low

  * Use gfxboot-compile instead of mkbootmsg if it's present, in order to
    work with newer gfxboot. Based on a patch from Daniel Baumann, for which
    thanks.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 07 Sep 2009 11:46:14 +0100

gfxboot-theme-ubuntu (0.8.3) karmic; urgency=low
